# MLT

./: .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  biome.json  deny.toml  human_prerequisites.md  lefthook.yml  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.js
.claude/: settings.json
.claude/hooks/: fmt-on-edit.sh
.claude/skills/qa-build/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.omp/extensions/mlt-tasks/: index.ts  package.json
crates/adapters/: Cargo.toml
crates/adapters/examples/: accounts_live.rs  anthropic_live.rs  claude_live.rs  codex_live.rs  openai_live.rs  openrouter_live.rs
crates/adapters/src/: accounts.rs  alarms.rs  anthropic.rs  claude.rs  clock.rs  codex.rs  consent.rs  http.rs  identity.rs  labels.rs  lib.rs  openai.rs  openrouter.rs  resilience.rs  secrets.rs  sources.rs
crates/core/: Cargo.toml
crates/core/src/: alarms.rs  domain.rs  lib.rs  ports.rs  sources.rs
crates/core/src/providers/: anthropic.rs  claude.rs  codex.rs  cost_provider.rs  mod.rs  oauth.rs  openai.rs  openrouter.rs
crates/core/src/providers/testdata/: claude_usage.json  codex_usage.json
docs/: ARCHITECTURE.md  OPEN_QUESTIONS.md  PRD.md  QUALITY_GATES.md
docs/adr/: 0001-runtime-tauri.md  0002-local-only-topology.md  0003-usage-source-polling.md  0004-scope.md  0005-provider-trait-blocks.md  0006-hexagonal-core.md  0007-quality-gates.md  0008-native-sidecars.md  0009-alarm-engine.md  0010-ui-svelte-tailwind.md  0011-data-layer-sqlx.md  0012-consent-model.md  0013-single-tray-icon.md  0014-v1-provider-set.md  0015-resilience-patterns.md  0016-api-key-connection-model.md  0017-provider-account-identity.md  0018-multi-provider-popover.md  0019-multi-account-discovery.md  0020-rrule-lite-recurrence.md  0021-missed-alarm-policy.md  README.md
docs/research/: PROVIDERS.md  SKILLS.md
docs/tasks/: 001-popover-experience-macos.md  002-source-discovery-consent.md  003-api-key-management.md  004-disconnect-provider.md  005-provider-codex.md  006-provider-openrouter.md  007-provider-openai-api.md  008-provider-anthropic-api.md  009-alarm-threshold-alerts.md  010-alarm-window-reset.md  011-alarm-one-off.md  012-alarm-recurring.md  013-alarm-missed-catchup.md  014-calendar-google.md  015-calendar-outlook.md  016-calendar-macos-device.md  017-calendar-manage-revoke.md  018-start-at-login.md  019-wake-catchup-refresh.md  020-platform-windows.md  021-platform-linux.md  022-privacy-statement.md  023-telemetry-opt-in.md  024-dist-macos-signing.md  025-dist-windows-signing.md  026-dist-auto-update.md  027-release-pipeline.md  README.md
scripts/: check-core-purity.sh  check-task-started.sh  check-tasks.sh  qa-install.sh  task-list.sh
scripts/lib/: tasks.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: alarms.rs  lib.rs  main.rs
src/lib/: alarms.ts  alarmsState.test.ts  alarmsState.ts  usage.ts  usageState.test.ts  usageState.ts
src/routes/: +page.svelte
