# Workspace root. `src-tauri` is the Tauri "app" crate (kept at the standard path the
# Tauri CLI expects); `crates/core` is the pure no-IO domain+ports; `crates/adapters`
# holds concrete port implementations. See docs/ARCHITECTURE.md §4 and docs/adr/0006.
[workspace]
resolver = "2"
members = ["src-tauri", "crates/core", "crates/adapters"]

[workspace.dependencies]
mlt-core = { path = "crates/core" }
mlt-adapters = { path = "crates/adapters" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
