[package]
name = "mlt"
version = "0.1.0"
description = "MLT — cross-platform menu-bar AI usage tracker"
authors = ["ogrodev"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mlt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["time"] }
mlt-core = { workspace = true }
mlt-adapters = { workspace = true }
# Typed payloads for the events emitted to the popover (e.g. the per-provider usage-error).
serde = { workspace = true }

[dev-dependencies]
# Test-only: async executor + trait macro for the API-key command tests (fakes for the
# SecretStore / ConsentStore / HttpPort ports). Not pulled into production builds.
async-trait = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }
