[package]
name = "mlt-adapters"
version = "0.1.0"
edition = "2021"
publish = false
description = "Concrete implementations of mlt-core ports. IO lives here, not in core."

[dependencies]
mlt-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
# rustls keeps TLS portable (no OpenSSL/native-tls) across mac/win/linux.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dirs = "5"
# In-process Mutex for the consent cache. parking_lot (already in the tree via tauri) gives
# poison-free guards, so lock sites read as locking, not error handling.
parking_lot = "0.12"
# Read-only access to Oh My Pi's per-profile SQLite credential store to discover Codex logins.
# `bundled` compiles SQLite in, so there is no system-libsqlite dependency on any platform.
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"

# OS keychain for OUR secrets (refreshed tokens), per-OS backend so the workspace builds
# cross-platform (incl. Linux/Windows CI). Runtime keychain access is only exercised by the
# real app, never by tests (which use an in-memory fake).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
