[package]
name = "mlt-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "MLT pure domain model and ports (no IO). See docs/adr/0006-hexagonal-core.md."

# IMPORTANT: this crate must NOT gain any IO-performing dependency (no reqwest, tokio
# net/fs, sqlx, keyring, std::fs, SystemTime::now). All side effects enter via `ports`.
# `serde_json` (parsing) and `time` (RFC3339 parsing ONLY — never `now`) are pure and OK.
# This invariant is enforced by the architecture-fitness gate (docs/QUALITY_GATES.md §2).
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["parsing"] }

# Test-only async executor for the strategy tests (rt + macros only — NO net/fs features,
# so the no-IO invariant holds). Production core never depends on a runtime.
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
# Poison-free locks for in-memory test fakes (see the rs-parking-lot rule). Test-only, so the
# no-IO invariant on production `core` is untouched.
parking_lot = "0.12"
